--- a/MarioWorker.cbp
+++ b/MarioWorker.cbp
@@ -80,6 +80,8 @@
 		<Unit filename="Headers/Bonuses/bonus_poisonblockinv.hpp" />
 		<Unit filename="Headers/Bonuses/bonus_starblock.hpp" />
 		<Unit filename="Headers/Bonuses/bonus_starblockinv.hpp" />
+		<Unit filename="Headers/Bonuses/bonus_switch.hpp" />
+		<Unit filename="Headers/Bonuses/bonus_toggle.hpp" />
 		<Unit filename="Headers/Core/collider.hpp" />
 		<Unit filename="Headers/Core/effect.hpp" />
 		<Unit filename="Headers/Core/matrix.hpp" />
@@ -88,9 +90,7 @@
 		<Unit filename="Headers/Core/platformfall.hpp" />
 		<Unit filename="Headers/Core/platformmov.hpp" />
 		<Unit filename="Headers/Core/projectile.hpp" />
-		<Unit filename="Headers/Core/scene.hpp">
-			<Option compile="1" />
-		</Unit>
+		<Unit filename="Headers/Core/scene.hpp" />
 		<Unit filename="Headers/Graphics/button.hpp" />
 		<Unit filename="Headers/Graphics/case.hpp" />
 		<Unit filename="Headers/Graphics/centipedeentity.hpp" />
@@ -209,7 +209,9 @@
 		<Unit filename="Headers/Miscs/projectile_spike.hpp" />
 		<Unit filename="Headers/Sceneries/scenery_bush.hpp" />
 		<Unit filename="Headers/Sceneries/scenery_cloud.hpp" />
+		<Unit filename="Headers/Sceneries/scenery_scroll.hpp" />
 		<Unit filename="Headers/Sceneries/scenery_static.hpp" />
+		<Unit filename="Headers/Sceneries/scenery_waterfall.hpp" />
 		<Unit filename="Headers/Sprites/fallable.hpp" />
 		<Unit filename="Headers/Sprites/gotcollision.hpp" />
 		<Unit filename="Headers/Sprites/gotspeed.hpp" />
@@ -275,6 +277,7 @@
 		<Unit filename="Headers/Sprites/sprite_spinygrey.hpp" />
 		<Unit filename="Headers/Sprites/sprite_spinygreyball.hpp" />
 		<Unit filename="Headers/Sprites/sprite_star.hpp" />
+		<Unit filename="Headers/Sprites/sprite_staticplant.hpp" />
 		<Unit filename="Headers/Sprites/sprite_throwedcoin.hpp" />
 		<Unit filename="Headers/Sprites/sprite_thwompb.hpp" />
 		<Unit filename="Headers/Sprites/sprite_thwompt.hpp" />
@@ -304,6 +307,8 @@
 		<Unit filename="Sources/Bonuses/bonus_poisonblockinv.cpp" />
 		<Unit filename="Sources/Bonuses/bonus_starblock.cpp" />
 		<Unit filename="Sources/Bonuses/bonus_starblockinv.cpp" />
+		<Unit filename="Sources/Bonuses/bonus_switch.cpp" />
+		<Unit filename="Sources/Bonuses/bonus_toggle.cpp" />
 		<Unit filename="Sources/Core/effect.cpp" />
 		<Unit filename="Sources/Core/matrix.cpp" />
 		<Unit filename="Sources/Core/pawn.cpp" />
@@ -428,7 +433,9 @@
 		<Unit filename="Sources/Miscs/projectile_spike.cpp" />
 		<Unit filename="Sources/Sceneries/scenery_bush.cpp" />
 		<Unit filename="Sources/Sceneries/scenery_cloud.cpp" />
+		<Unit filename="Sources/Sceneries/scenery_scroll.cpp" />
 		<Unit filename="Sources/Sceneries/scenery_static.cpp" />
+		<Unit filename="Sources/Sceneries/scenery_waterfall.cpp" />
 		<Unit filename="Sources/Scenes/editor.cpp" />
 		<Unit filename="Sources/Scenes/ingame.cpp" />
 		<Unit filename="Sources/Scenes/logo.cpp" />
@@ -497,6 +504,7 @@
 		<Unit filename="Sources/Sprites/sprite_spinygrey.cpp" />
 		<Unit filename="Sources/Sprites/sprite_spinygreyball.cpp" />
 		<Unit filename="Sources/Sprites/sprite_star.cpp" />
+		<Unit filename="Sources/Sprites/sprite_staticplant.cpp" />
 		<Unit filename="Sources/Sprites/sprite_throwedcoin.cpp" />
 		<Unit filename="Sources/Sprites/sprite_thwompb.cpp" />
 		<Unit filename="Sources/Sprites/sprite_thwompt.cpp" />
